--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
+    "json-server": "^0.17.0",
+    "pinia": "^2.0.23",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^3.2.41",
@@ -23,6 +25,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "vue-cli-plugin-pinia": "~0.1.6",
     "vue-cli-plugin-tailwind": "~3.0.0"
   },
   "eslintConfig": {
